@@ -82,7 +82,7 @@
   dump: dump`5min, dump`1min, dump`complete, dump`error
   db: db`dbck, db`purge, db`warnings
   object: object`create, object`destroy, object`move, object`rename,
-          object`kill
+          object`kill, object`flag
   sql: sql`connect, sql`connectfail, sql`disconnect
   signal: signal`usr1, signal`usr2
   player: player`create, player`connect, player`disconnect
@@ -143,6 +143,16 @@
 
   object`rename  (objid, new name, old name)
       Triggered when any object is renamed.
+      
+  object`flag  (objid of object with flag, flag name, type, setbool, setstr)
+      Triggered when a flag or power which has the "event" restriction is 
+      set or cleared. "type" is one of FLAG or POWER. setbool is 1 if the
+      flag/power is being set, and 0 if it's being cleared. setstr is either
+      "SET" or "CLEARED".
+    Example:
+      &OBJECT`FLAG event handler=@cemit Admin=capstr(lcstr(%2)) %1 
+                                    [lcstr(%4)] on [name(%0)] by %n.
+
 & EVENT SQL
   sql`connect (platform)
       Triggered on successful connect to the SQL database.
